# Django-React-Notes-App

backend/: Procfile  db.sqlite3  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx
