[project]
name = "django-react-notes-app"
version = "0.1.0"
description = ""
authors = [
    {name = "vidi",email = "vidi@automationwr.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref (>=3.8.1,<4.0.0)",
    "django (>=5.2.3,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
